[tool.poetry]
name = "concatenated-seekable-file"
version = "0.1.0"
description = "Provides single seekable file-like for multiple concatenated file-like objects in sync and async fashion"
authors = ["JuniorJPDJ <dev@juniorjpdj.pl>"]

[tool.poetry.dependencies]
python = "^3.6.1"
asyncio-rlock = "^0.1.0"
asynciobase = { git = "https://github.com/JuniorJPDJ/asynciobase" }

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
